# 3d-ai

./: .gitignore  README.md  pyproject.toml
configs/: colab_t4.yaml  default.yaml  quality_gpu.yaml
configs/quality/: draft.yaml  high.yaml  standard.yaml
docs/: ARCHITECTURE.md  COLAB_REAL_TEST_GUIDE.html  COLAB_REAL_TEST_GUIDE.md  DECISIONS.md  OPERATOR_GUIDE.md  PHASE1_WALKTHROUGH.md  PHASE2_WALKTHROUGH.md  PHASE3_WALKTHROUGH.md  PHASE4_WALKTHROUGH.md  PHASE5_WALKTHROUGH.md  PHASE6_WALKTHROUGH.md  PHASE7_WALKTHROUGH.md  PHASES.md  VALIDATION_RELIABLE_V2.md
notebooks/: colab_pipeline.ipynb  colab_real_test.ipynb
propertyscan/: __init__.py  cli.py
propertyscan/capture/: __init__.py  arkit.py  base.py  detect.py  image_folder.py  image_sequence.py  video.py
propertyscan/core/: __init__.py  config.py  context.py  device.py  exceptions.py  logging.py  progress.py  stage.py
propertyscan/dataset/: __init__.py  builder.py
propertyscan/domain/: __init__.py  capture.py  dataset.py  depth.py  frames.py  gaussian.py  geometry.py  provenance.py  quality.py  scene.py
propertyscan/export/: __init__.py  base.py  ply.py  scene_json.py
propertyscan/geometry/: __init__.py  base.py  deps.py  foundation_infer.py  result_builder.py  router.py  runtime.py
propertyscan/intelligence/: __init__.py  classify.py  dedup.py  image_ops.py  keyframes.py  motion.py  pipeline.py  quality.py
propertyscan/optimize/: __init__.py  inspector.py  ply_io.py
propertyscan/pipeline/: __init__.py  export_pipeline.py  frame_pipeline.py  geometry_pipeline.py  train_pipeline.py
(+61 files in other folders)
