[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propertyscan"
version = "0.1.0"
description = "AI-first Geometry Engine for real-estate 3D reconstruction (MASt3R / DUSt3R / Depth Anything V2)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "PropertyScan AI" }]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "numpy>=1.24",
  "Pillow>=10.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
# Phase 4 foundation stack (install on Colab / GPU machine — not required for unit tests).
# MASt3R/DUSt3R themselves are installed from NAVER git repos (see docs/PHASE4_WALKTHROUGH.md).
geometry = [
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.38",
  "Pillow>=10.0",
  "einops>=0.7",
  "opencv-python-headless>=4.8",
]
video = [
  "opencv-python-headless>=4.8",
]
depth = [
  "torch>=2.1",
  "transformers>=4.38",
  "Pillow>=10.0",
]

[project.scripts]
propertyscan = "propertyscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["propertyscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: tests that require CUDA and real foundation-model weights",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
